# UpkkCS2Browser-Client

./: README.md
.github/workflows/: desktop-build-discord.yml  desktop-build.yml  desktop-update-dependencies.yml  latest-desktop-build-discord.yml
desktop/: README.md  package-lock.json  package.json  sync-version.sh  vite.config.ts
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  secure_storage.rs
desktop/src/api/: index.ts
desktop/src/components/: AddServerModal.tsx  AutoJoinModal.tsx  CategoryFilter.tsx  FavoriteFilter.tsx  GameTypeFilter.tsx  LoginModal.tsx  MapHistory.tsx  Pagination.tsx  PlayerHistoryChart.tsx  QueryRecords.tsx  RGBAColorPicker.tsx  RegionFilter.tsx  SearchBar.tsx  ServerCard.tsx  ServerCardSkeleton.tsx  ServerDetailModal.tsx  ServerListItem.tsx  SettingsModal.tsx  StatsBar.tsx  SteamClientSwitch.tsx  TabNavigation.tsx  ToastNotification.tsx  TopPagination.tsx  UpdateModal.tsx  UserStatusButton.tsx  ViewModeSwitch.tsx  index.ts
desktop/src/pages/: CheckInPage.tsx  FavoritesPage.tsx  ForumPage.tsx  HomePage.tsx  MonitorPage.tsx  SettingsPage.tsx  index.ts
desktop/src/services/: a2s.ts  monitor.ts  secureStorage.ts  update.ts
desktop/src/store/: i18n.tsx  index.tsx  log.ts  theme.tsx  user.tsx
desktop/src/types/: global.d.ts  server.ts  user.ts
