[package]
name = "app"
version = "1.7.0"
description = "Upkk Server Browser - A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Enable devtools (F12) for debugging. Disabled by default for production builds.
# 启用开发者工具 (F12)。生产构建默认禁用。
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2.5.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["unstable"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
url = "2.5.8"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "time"] }
# Secure credential storage
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
machine-uid = "0.5"
hex = "0.4"
dirs = "6.0"
